[fix] hover effect in header no jump

--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,16 @@ header ul li a{
     align-items: center;
 }
 
+header{
+    border-bottom: 1px solid lightgrey;
+}
+
+.header-left li a , .header-right li a{
+    border-bottom: 1px solid rgba(0, 97, 255, 0);
+}
+
 .header-left li  a:hover , .header-right li a:hover{
-    border-bottom: 2px solid rgb(0, 97, 255) ;
+    border-bottom: 1px solid rgba(0, 97, 255, 1)
 }
 
 .header-left * {
